[package]
name = "one-of-futures"
version = "0.1.0"
authors = ["Gleb Pomykalov <glebpom@gmail.com>"]
edition = "2018"
description = "Future-aware Either-like type with multiple variants"
keywords = ["async", "futures", "either"]
categories = ["asynchronous"]
license = "MIT"
homepage = "https://github.com/glebpom/one-of-futures"
repository = "https://github.com/glebpom/one-of-futures"
readme = "README.md"

[dependencies]
futures-core = "0.3.1"
futures-sink = { version = "0.3.1", optional = true }

[dev-dependencies]
futures = { version = "0.3.0-alpha.19" }
version-sync = "0.8"

[features]
default = ["sink"]
sink = ["futures-sink"]
