[package]
name = "one-of-futures"
version = "0.1.2"
authors = ["Gleb Pomykalov <glebpom@gmail.com>"]
edition = "2018"
description = "Future-aware Either-like type with multiple variants"
keywords = ["async", "futures", "either"]
categories = ["asynchronous"]
license = "MIT"
homepage = "https://github.com/glebpom/one-of-futures"
documentation = "https://docs.rs/one-of-futures/0.1.2/one-of-futures/"
repository = "https://github.com/glebpom/one-of-futures"
readme = "README.md"

[dependencies]
futures-core = { version = "0.3.1", optional = true }
futures-sink = { version = "0.3.1", optional = true }
futures_01 = { version = "0.1", optional = true, package = "futures" }

[dev-dependencies]
futures = { version = "0.3.1" }
version-sync = "0.8"

[features]
default = ["sink"]
sink = ["futures-sink", "futures_03"]
futures_03 = ["futures-core"]
