[package]
name = "one-of-futures"
version = "0.1.3"
authors = ["Gleb Pomykalov <glebpom@gmail.com>"]
edition = "2018"
description = "Future-aware Either-like type with multiple variants"
keywords = ["async", "futures", "either"]
categories = ["asynchronous"]
license = "MIT"
homepage = "https://github.com/glebpom/one-of-futures"
documentation = "https://docs.rs/one-of-futures/0.1.2/one-of-futures/"
repository = "https://github.com/glebpom/one-of-futures"
readme = "README.md"

[dependencies]
futures-core = { version = "0.3.1", optional = true }
futures-sink = { version = "0.3.1", optional = true }
futures-01 = { version = "0.1", optional = true, package = "futures" }
tokio = { version = "0.2", optional = true }
#tokio-01 = { version = "0.1", optional = true, package = "tokio" }

[dev-dependencies]
futures = { version = "0.3.1" }
version-sync = "0.8"

[features]
default = ["sink"]
sink = ["futures-sink", "futures_03"]
futures_03 = ["futures-core"]
futures_01 = ["futures-01"]
tokio-io = ["tokio", "tokio/io-util"]
#tokio-io_01 = ["tokio-01"]

[workspace]
members = [
  ".",
  "test-futures-01",
  "test-futures-03",
]
