[package]
name = "test-futures-01"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@lancastr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
one-of-futures = { path = "..", default-features = false, features = ["futures_01"] }
futures = "0.1"
